--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abasteça Barato</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="../../../Conteudos Plus/fontawesome-free-6.3.0-web/css/all.min.css">
+
 </head>
 
 <body>
@@ -27,14 +27,11 @@
                         <li>
                             <p>Contato</p>
                         </li>
-                        <li><a href="https://wa.me/5513988377936" target="_blank"><i
-                                    class="fa-brands fa-whatsapp"></i></a>
+                        <li><a href="https://wa.me/5513988377936" target="_blank">Whatsapp</a>
                         </li>
-                        <li><a href="https://github.com/kauannlima" target="_blank"><i
-                                    class="fa-brands fa-github"></i></a>
+                        <li><a href="https://github.com/kauannlima" target="_blank">GitHub</a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/kauan-de-almeida-lima-80a2b2206/" target="_blank"><i
-                                    class="fa-brands fa-linkedin-in"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/kauan-de-almeida-lima-80a2b2206/" target="_blank">Linkedin</a></li>
                     </ul>
                 </div>
             </div>
